<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/cab_edit"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/action_edit"
        app:showAsAction="always"
        android:orderInCategory="1"
        />

    <item android:id="@+id/cab_delete"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/action_delete"
        app:showAsAction="always"
        android:orderInCategory="2"
        />

    <item android:id="@+id/cab_share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/action_share"
        app:showAsAction="always"
        android:orderInCategory="3"/>

</menu>