<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gmail.mlwhal.dinnerhalp.ViewDinnerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:id="@+id/section_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/button_help"
            android:paddingBottom="8dp"
            android:text="@string/view_dinner_title"
            style="@style/HeaderText" />

        <TextView android:id="@id/button_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/button_help"
            style="@style/MedButton"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:id="@+id/hint_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="16dp"
            android:layout_gravity="center_vertical"
            android:text="@string/dinner_view_hint"
            style="@style/HintText"/>

        <TextView android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/button_ok"
            style="@style/SmallButton"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout android:id="@+id/section2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="32dp"
                android:orientation="horizontal">

                <TextView android:id="@+id/textview_method"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="32dp"
                    android:text="@string/spinner_method"
                    style="@style/ViewDinnerText"/>

                <TextView android:id="@+id/textview_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spinner_time"
                    style="@style/ViewDinnerText"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView android:id="@+id/textview_servings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="32dp"
                    android:text="@string/spinner_servings"
                    style="@style/ViewDinnerText"/>

                <ImageView android:id="@+id/image_dinner_thumb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="32dp"
                    android:scaleType="fitStart"
                    android:contentDescription="@string/image_dinner_picture"/>

                <TextView android:id="@+id/textview_recipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_no_recipe"
                    style="@style/ViewDinnerRecipeText"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
